--- a/kirppu/templates/kirppu/app_items.html
+++ b/kirppu/templates/kirppu/app_items.html
@@ -127,7 +127,7 @@
     {# Output a single item_container as a template for javascript. #}
     {% include 'kirppu/app_items_item.html' with controls_enabled=True tag_type="template" name="" price="0" code="" vendor_id="" adult="" locked=False %}
 
-    <div id="items" data-require-terms="true">
+    <div id="items" data-require-terms="true" data-testid="itemContainer">
         {# Output a template container for every non-printed item user has. #}
         {% for i in items %}
             {% include 'kirppu/app_items_item.html' with controls_enabled=True name=i.name price=i.price_fmt code=i.code vendor_id=i.vendor_id tag_type=i.type adult=i.adult locked=i.is_locked %}
