Use POST logout.
Fetching logout endpoint (e.g. for prefetch) is not side-effect free, so
GET has been deprecated. GET requests were deprecated in Django 4.1 and
removed in Django 5.0.

Fixes local auth support and changes oauth to also use POST on logout.
- Unify logout url per one used in settings.

--- a/kirppu/static_src/css/general.css
+++ b/kirppu/static_src/css/general.css
@@ -29,3 +29,17 @@ code.yv8k02zi:before {
     color: #f00;
     content: "???";
 }
+
+#logout-menuitem { padding: 0; }
+#logout-menuitem form { display: flex; }
+#logout-menuitem form button {
+    flex-grow: 1;
+    padding: 3px 20px;
+}
+
+.logout-item form button {
+    background: none;
+    text-align: start;
+    border: none;
+    cursor: pointer;
+}
