Refactor stats graphs labels.
- Add a bit of margin below graph as the xlabel seems to leak a bit outside.

--- a/kirppu/templates/kirppu/general_stats_graph.html
+++ b/kirppu/templates/kirppu/general_stats_graph.html
@@ -2,7 +2,7 @@
     <h2>{{ title }}</h2>
     <div id="{{ id }}_legend"></div>
     <div id="{{ id }}" style="width:100%; height:300px;"></div>
-    <div id="{{ id }}_numbers" class="well">
+    <div id="{{ id }}_numbers" class="well" style="margin-top: 8px;">
         <div class="row">
             <div class="col-xs-3 info-key">{% trans "Mean" context "Mean value, average" %}</div>
             <div class="col-xs-9 graph_avg"></div>
