--- a/kirppu/templates/kirppu/general_stats.html
+++ b/kirppu/templates/kirppu/general_stats.html
@@ -35,9 +35,11 @@
 
 {% block body %}
 {% trans "Compensations" as tlCompensations %}
+{% trans "%s / vendor" as tlCompensationsLabel %}
 {% trans "Purchases" as tlPurchases %}
+{% trans "%s / purchase" as tlPurchasesLabel %}
 {% trans "Brought" as tlBrought %}
-{% trans "Items" as tlItems %}
+{% trans "items / vendor" as tlBroughtLabel %}
 
     <h1>
         <span id="mode_glyph" class="glyphicon glyphicon glyphicon-signal"></span>
@@ -57,6 +59,7 @@
                 "legend": "graph2_legend",
                 "numbers": "graph2_numbers",
                 "content": "compensations",
+                "xlabel": {{ tlCompensationsLabel|replaceCurrency|json }},
                 "bucket": 50
             },
             "purchases": {
@@ -64,6 +67,7 @@
                 "legend": "graph1_legend",
                 "numbers": "graph1_numbers",
                 "content": "purchases",
+                "xlabel": {{ tlPurchasesLabel|replaceCurrency|json }},
                 "bucket": 2
             },
             "brought": {
@@ -72,7 +76,7 @@
                 "numbers": "graph3_numbers",
                 "content": "brought",
                 "unit": "",
-                "xlabel": {{ tlItems|json }},
+                "xlabel": {{ tlBroughtLabel|json }},
                 "bucket": 5
             }
         },
