--- a/kirppu/templates/kirppu/app_items.html
+++ b/kirppu/templates/kirppu/app_items.html
@@ -5,7 +5,7 @@
 {% block head %}
     {{ block.super }}
     <link href="{% static "kirppu/css/price_tags.css" %}" rel="stylesheet">
-    <script src="{% static "kirppu/js/jeditable.js" %}"></script>
+    <script src="{% static "kirppu/js/malle.js" %}"></script>
     <script src="{% static "kirppu/js/price_tags.js" %}"></script>
     <style type="text/css">
         {% include "kirppu/currency_style.css" %}
@@ -151,7 +151,6 @@
         itemsConfig.urls.item_to_list = "{% url 'kirppu:item_to_printed' event_slug=event.slug code='__placeholder__' %}";
         itemsConfig.urls.size_update = "{% url 'kirppu:item_update_type' event_slug=event.slug code='__placeholder__' %}";
         itemsConfig.urls.all_to_print = "{% url 'kirppu:all_to_print' event_slug=event.slug %}";
-        itemsConfig.urls.roller = "{% static "kirppu/img/roller.gif" %}";
         itemsConfig.urls.item_to_print = "{% url 'kirppu:item_to_not_printed' event_slug=event.slug code='__placeholder__' %}";
         itemsConfig.urls.item_hide = "{% url 'kirppu:item_hide' event_slug=event.slug code='__placeholder__' %}";
         {% if not is_registration_open %}itemsConfig.enabled = false;{% endif %}
@@ -165,7 +164,7 @@
 
             bindFormEvents();
 
-            bindTagEvents($('#items > .item_editable'));
+            bindTagEvents('#items > .item_editable');
             bindListTagEvents($('#printed_items > .item_container'));
         });
     </script>
