--- a/kirppu/templates/kirppu/app_items.html
+++ b/kirppu/templates/kirppu/app_items.html
@@ -125,18 +125,18 @@
     </form>
 
     {# Output a single item_container as a template for javascript. #}
-    {% include 'kirppu/app_items_item.html' with controls_enabled=True tag_type="template" name="" price="0" code="" vendor_id="" adult="" locked=False %}
+    {% include 'kirppu/app_items_item.html' with controls_enabled=True tag_type="template" name="" price="0" code="" vendor_id="" adult="" item_type="" locked=False %}
 
     <div id="items" data-require-terms="true">
         {# Output a template container for every non-printed item user has. #}
         {% for i in items %}
-            {% include 'kirppu/app_items_item.html' with controls_enabled=True name=i.name price=i.price_fmt code=i.code vendor_id=i.vendor_id tag_type=i.type adult=i.adult locked=i.is_locked %}
+            {% include 'kirppu/app_items_item.html' with controls_enabled=True name=i.name price=i.price_fmt code=i.code vendor_id=i.vendor_id tag_type=i.type adult=i.adult item_type=i.item_type locked=i.is_locked %}
         {% endfor %}
     </div>
     <div id="printed_items" data-require-terms="true">
         {# Output a template container for every printed item user has. #}
         {% for i in printed_items %}
-            {% include 'kirppu/app_items_item.html' with controls_enabled=True name=i.name price=i.price_fmt code=i.code vendor_id=i.vendor_id tag_type="list" adult=i.adult locked=True %}
+            {% include 'kirppu/app_items_item.html' with controls_enabled=True name=i.name price=i.price_fmt code=i.code vendor_id=i.vendor_id tag_type="list" adult=i.adult item_type=i.item_type locked=True %}
         {% endfor %}
     </div>
 {% endblock %}
