Add a clarifying checkmark to completed vendor notes.

--- a/kirppu/static_src/css/checkout.css
+++ b/kirppu/static_src/css/checkout.css
@@ -62,6 +62,9 @@ td.erased {
     color: #555;
     text-decoration: line-through;
 }
+td.erased .glyphicon {
+    margin-left: 1em;
+}
 
 tr.receipt_tr_clickable:hover {
     text-decoration: underline;
