Add more fallback options for displaying user name.
Default user might not have first/last name, so use other values as
alternative.

--- a/kirppu/templates/kirppu/navbar_login.html
+++ b/kirppu/templates/kirppu/navbar_login.html
@@ -2,7 +2,11 @@
 {% if user.is_authenticated %}
     <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-            {{ user.first_name }} {{ user.last_name }}
+            {% if user.first_name or user.last_name %}
+                {{ user.first_name }} {{ user.last_name }}
+            {% else %}
+                {{ user.email|default:user.get_username|default:"&mldr;" }}
+            {% endif %}
             <b class="caret"></b>
         </a>
         <ul class="dropdown-menu">
