Fix item list view layout.
The extra code in either orientation, and the item type should've not
been visible.

--- a/kirppu/static_src/css/price_tags.css
+++ b/kirppu/static_src/css/price_tags.css
@@ -289,6 +289,11 @@ html, :root {
 .item_container button {
     z-index: 150;
 }
+@media screen, projection, handheld {
+    .item_list .item_extra_info, .item_list .item_extra_code.rotated {
+        display: none;
+    }
+}
 
 
 .item_button_printed, .item_button_toggle, .item_button_hide {
