--- a/kirppu/templates/kirppu/app_items.html
+++ b/kirppu/templates/kirppu/app_items.html
@@ -165,7 +165,7 @@
 
             bindFormEvents();
 
-            bindTagEvents('#items > .item_editable');
+            bindTagEvents('#items > .item_container');
             bindListTagEvents($('#printed_items > .item_container'));
         });
     </script>
